fixed high contrast color issue

--- a/www/default.css
+++ b/www/default.css
@@ -1330,6 +1330,7 @@ input[data-invalid^="yes"]
 }
 
 .close-round-buttons {
+  color:black;
   position: absolute;
   top: 0.2em;
   right: 0.2em;
